--- a/web/css/admin-index.css
+++ b/web/css/admin-index.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
-body {
+/* body {
     margin: 0;
     /* background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);   */
-    background: #B2EBF2; 
+    /* background: #B2EBF2;  */
+    /* background: red; */
     /* background: #550527; */
-}
-
-
+/*} */
 
 main > h1 {
 margin: auto;
@@ -60,8 +59,6 @@ a{
     
 }
 
-
-
 .model-content:hover {
     transition: 0.7s;
     transform:  scale(1.030);
@@ -70,7 +67,7 @@ a{
 }
 
 #renta {
-    background: url("../img/renta-red.jpg");
+    background: url("../img/renta.jpg");
     background-size: 582px 302px;
     color: #020;
 }
@@ -90,7 +87,7 @@ a{
 }
 
 #modelo {
-    background: url("../img/modelo3.jpg");
+    background: url("../img/modelo.jpg");
     background-size: 452px 362px;
     background-position-y: 0px;
     background-position: bottom;    
@@ -112,7 +109,7 @@ a{
 }
 
 #marca {
-    background: url("../img/marca2.jpg");
+    background: url("../img/marca.jpg");
     background-size: 402px 302px;
     background-position: center;
     color: #FFF;
