--- a/web/css/cliente-carview.css
+++ b/web/css/cliente-carview.css
@@ -2,7 +2,7 @@
 
 body {
     /* background: #D1CCDC; */
-    background-color: #FFF;
+    width: auto;
 }
 
 .banner {
@@ -18,11 +18,11 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 20px;
-    
 }
 
 .car-image {
-    margin: auto;
+    margin: 200px auto 0px auto;
+    
 }
 
 .info {
