--- a/web/css/style.css
+++ b/web/css/style.css
@@ -8,17 +8,26 @@
 /*=== MEDIA QUERY ===*/
 @import url("https://fonts.googleapis.com/css?family=Exo:500,600,700|Roboto&display=swap");
 html {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
-body {
+.btnDarkMode{
+}
+
+.index-body {
   line-height: 1.6;
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
   color: #6F8BA4;
   font-weight: 400;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+  padding-left: 0px;
+  margin-top: 0px;
+}
+
+main {
+  margin: 0px;
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
@@ -214,6 +223,7 @@ input[type=email]:focus, input[type=password]:focus, input[type=text]:focus, inp
 
 .section {
   padding: 100px 0;
+  
 }
 
 .section-sm {
@@ -498,9 +508,10 @@ a:focus {
   position: relative;
   overflow: hidden;
   background: #fff;
-  background: url("../images/bg/slider-bg-1.jpg") no-repeat;
+  color: #FFF;
   background-size: cover;
   min-height: 550px;
+  width: auto;
 }
 .banner .block {
   padding: 80px 0px 160px;
@@ -511,8 +522,12 @@ a:focus {
   letter-spacing: -1.2px;
   text-transform: capitalize;
   color: #223a66;
+  
 }
-
+.flexy {
+  display: flex;
+  justify-content: center;
+}
 .letter-spacing {
   letter-spacing: 2px;
 }
@@ -619,6 +634,8 @@ a:focus {
 
 .features {
   margin-top: -70px;
+  position: static;
+  background-color: #FFFFFF;
 }
 
 .feature-item {
@@ -628,7 +645,22 @@ a:focus {
   background-color: #fff;
   border-radius: 15px 15px 15px 15px;
   box-shadow: 0px 0px 30px 0px rgba(0, 42, 106, 0.1);
+  position: relative;
+  
 }
+
+h4 .mb-3 {
+  font-size: 40px;
+}
+
+h1 .mb-3 {
+  color: #FFF;
+}
+
+.mt-3 {
+  color: #fff;
+}
+
 .feature-item .feature-icon i {
   font-size: 50px;
   color: #223a66;
@@ -828,6 +860,7 @@ a:focus {
 
 .mb-30 {
   margin-bottom: 30px;
+  color:#dedede;
 }
 
 .text-color-primary {
