botonera,roles,widget=seguridadNew,rentar,formDob

--- a/web/css/admin-index.css
+++ b/web/css/admin-index.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     /* background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);   */
-    background: #B2EBF2; 
+    background: #ffffff; 
     /* background: #550527; */
 }
 
